<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:theme="@style/buksu"
    android:background="@color/buksuPrimary"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signin"
            android:fontFamily="@font/proxima_extra_bold"
            android:textSize="30sp"
            android:textColor="@color/buksuSecondary"/>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/m_email"
            app:boxStrokeColor="@color/buksuSecondary"
            app:hintTextColor="@color/buksuSecondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:textColor="@color/white"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="email"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:padding="10dp"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/m_password"
            app:hintTextColor="@color/buksuSecondary"
            app:boxStrokeColor="@color/buksuSecondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:passwordToggleEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="password"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:padding="10dp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView

            android:id="@+id/TvForgotPass"
            android:layout_marginTop="10dp"
            android:layout_gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgotpass"
            android:textColor="@color/buksuSecondary"
            android:textSize="15sp"/>



        <com.example.myloadingbutton.MyLoadingButton


            android:layout_marginTop="10dp"
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:mlb_labelSize="12sp"
        app:mlb_label="Login"
        app:mlb_backgroundColor="@color/buksuSecondary"
        app:mlb_labelColor="@color/white"
        app:mlb_loaderColor="@color/white"
        app:mlb_setNormalAfterError="false"
        app:mlb_animationDuration="300"
        app:mlb_setErrorIcon="@drawable/ic_progress_error"
        app:mlb_setDoneIcon="@drawable/ic_progress_done"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"

            />


        <TextView
            android:id="@+id/TvRegister"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noAccountYet"
            android:textColor="@color/buksuSecondary"
            android:textSize="15sp"/>

    </LinearLayout>

</RelativeLayout>